# InkWild

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PRODUCT.md  README.en.md  README.md  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  _freeprobe_counter.txt  _freeprobe_ip.txt  _selfplay.txt  ai_style_exp.py  config.py  cover_exp.py  database.py  dependencies.py  dev.db  focus_compare.py  main.py  phase2_task1_review.db  pyproject.toml  regen_worlds.py  sentry_config.py  style_exp_prod.py  test.db  test_batch_memory.db  test_npc_reflection.db  test_semantic.db  test_t4.db  test_voice_anchor.db  tone_exp_prod.py  verify_hook.py
backend/api/: admin.py  admin_analytics.py  admin_announcements.py  admin_audit.py  admin_content.py  admin_credits.py  admin_dashboard.py  admin_feedback.py  admin_models.py  admin_review.py  admin_system.py  admin_users.py  auth.py  credits.py  feedback.py  game.py  notifications.py  workshop.py  worlds.py
backend/cli/: auto_play.py  backfill_voice_style.py  create_admin.py
backend/engine/: action_segmentation.py  case_board.py  case_board_prompts.py  compressor.py  condition_dsl.py  condition_tree.py  content_filter.py  content_status.py  context_builder.py  cost_guardrail.py  director_agent.py  director_validator.py  ending_system.py  event_progress.py  event_system.py  imagery_extractor.py  info_propagation.py  input_sanitizer.py  intent_system.py  memory_manager.py  moderation.py  narrative_arc.py  narrator_agent.py  (+18 more)
(+912 files in other folders)
