[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkwild-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "structlog>=24.4.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.28.0",
    "xai-sdk>=0.1.0",
    "sentry-sdk[fastapi,sqlalchemy]>=2.20.0",
    "Pillow>=10.0.0",
    "oss2>=2.19.1",
    "beautifulsoup4>=4.12",
    "jsonschema>=4.20.0",
    "authlib>=1.3.0",
    "email-validator>=2.0.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "no_db: tests that do not require database setup",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.setuptools.packages.find]
exclude = ["static*", "tests*"]
